--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,14 +48,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          sudo rm -rf \
-            /usr/share/dotnet \
-            /usr/local/lib/android \
-            /opt/ghc \
-            /usr/local/share/powershell \
-            /usr/share/swift \
-            /usr/local/share/boost \
-            || true
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell /usr/share/swift /usr/local/share/boost || true
           sudo apt-get clean || true
           df -h
 
@@ -70,8 +63,8 @@ jobs:
           sudo chmod 600 "$SWAP_PATH"
           sudo mkswap "$SWAP_PATH"
           sudo swapon "$SWAP_PATH"
-          sudo swapon --show
-          free -h
+          sudo swapon --show || true
+          free -h || true
 
       - name: Install build dependencies
         shell: bash
@@ -94,7 +87,7 @@ jobs:
           git clone --depth=1 --branch "${OWRT_TAG}" "${OWRT_REPO}" openwrt
           : > openwrt/build.log
 
-      - name: Add Passwall packages feed (for offline Passwall2 deps)
+      - name: Add Passwall packages feed
         shell: bash
         run: |
           set -euo pipefail
@@ -246,40 +239,37 @@ jobs:
         run: |
           set -euo pipefail
 
+          REPO="${{ github.repository }}"
+          TAG="${GITHUB_REF##*/}"
+          REL="${{ steps.meta.outputs.release }}"
+
           cd openwrt/bin/targets/x86/64
 
-          REL="${{ steps.meta.outputs.release }}"
           PREFIX="HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${REL}-${{ env.TARGET }}"
-          TAG="${GITHUB_REF##*/}"
 
-          if [ -f ../../../../build.log ]; then
-            cp -f ../../../../build.log ./build.log
-          else
-            echo "WARNING: build.log not found at ../../../../build.log"
+          if [ -f "../../../../build.log" ]; then
+            cp -f "../../../../build.log" ./build.log
           fi
 
-          printf '%s\n' \
-            "Base: OpenWrt 24.10.5 (x86_64)" \
-            "Profile: Clean Edition" \
-            "" \
-            "Notes:" \
-            "- Argon theme is included but the default UI remains Bootstrap (stock-like)." \
-            "- Passwall2-ready offline base includes tcping/geoview/v2ray-geoip/v2ray-geosite and common runtime deps." \
-            "" \
-            "Recommended:" \
-            "- squashfs-uefi for UEFI systems" \
-            "- squashfs-bios for legacy BIOS systems" \
-            "" \
-            "Default:" \
-            "- Hostname: HarryWrt" \
-            "- Timezone: Asia/Hong_Kong" \
-            "" \
-            "Rootfs:" \
-            "- 1024MB (1GB)" \
-            "" \
-            "Integrity:" \
-            "- SHA256SUMS included" \
-            > release_notes.txt
+          cat > release_notes.txt <<'EOF'
+Base: OpenWrt 24.10.5 (x86_64)
+Profile: Clean Edition
+
+Notes:
+- Argon theme is included but the default UI remains Bootstrap.
+- This build is offline-ready for third-party packages.
+
+Recommended:
+- squashfs-uefi for UEFI systems
+- squashfs-bios for legacy BIOS systems
+
+Default:
+- Hostname: HarryWrt
+- Timezone: Asia/Hong_Kong
+
+Integrity:
+- SHA256SUMS included
+EOF
 
           ASSETS=(
             "${PREFIX}-squashfs-bios.img.gz"
@@ -290,17 +280,21 @@ jobs:
             "build.log"
           )
 
-          if ! gh release view "${TAG}" >/dev/null 2>&1; then
+          echo "Checking for existing release: ${TAG} (repo: ${REPO})"
+          if ! gh release view "${TAG}" --repo "${REPO}" >/dev/null 2>&1; then
+            echo "Creating new release: ${TAG}"
             gh release create "${TAG}" \
+              --repo "${REPO}" \
               --title "HarryWrt Clean 24.10.5 ${REL} - x86_64" \
               --notes-file release_notes.txt
           fi
 
+          echo "Uploading assets..."
           for f in "${ASSETS[@]}"; do
             if [ -f "$f" ]; then
               echo "Uploading: $f"
-              gh release upload "${TAG}" "$f" --clobber
+              gh release upload "${TAG}" "$f" --repo "${REPO}" --clobber
             else
-              echo "Skipping missing asset: $f"
+              echo "Missing asset: $f"
             fi
           done
